--- a/public/css/screen.less
+++ b/public/css/screen.less
@@ -40,8 +40,16 @@ footer {
 
 #content {
 	margin: 4em auto;
-	max-width: 43em;
+	max-width: 58em;
 }
+
+li.directory {
+	font-size: 1.4em;
+	list-style: none;
+	margin-top: 20px;
+	text-indent: -20px;
+}
+
 
 #page {
 	background: #fff;
