--- a/views/list.erb
+++ b/views/list.erb
@@ -1,15 +1,4 @@
 <p>Here's a list of all the pages inside your wiki directory:</p>
 
-<ul>
-	<% for page in @pages do %>
-		<% if page[:dir] %>
-			<% if page[:top_level] %>
-				<li class="top_directory"><%= page[:title] %></li>
-			<% else %>
-				<li class="directory"><a href="/<%= page[:link] %>"><%= page[:title] %></li>
-			<% end %>
-		<% else %>
-			<li><a href="/<%= page[:link] %>"><%= page[:title] %></a></li>
-		<% end %>
-	<% end %>
-</ul>
+
+<%= render_directory_list(@pages) %>
