--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,14 @@
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
 	<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/css/bootstrap.css">	
+	<link rel="stylesheet" href="/css/tree.css">	
+  
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="./js/bootstrap.min.js"></script>
 </head>
+
 <body>
 	<section id="content">
 		<div id="page" class="page-header">
