--- a/views/list.erb
+++ b/views/list.erb
@@ -10,10 +10,10 @@ $(function () {
         var children = $(this).parent('li.parent_li').find(' > ul > li');
         if (children.is(":visible")) {
             children.hide('fast');
-            $(this).attr('title', 'Expand this branch').find(' > i').addClass('icon-plus-sign').removeClass('icon-minus-sign');
+            $(this).attr('title', 'Expand this branch').find(' > span.glyphicon').addClass('glyphicon-folder-close').removeClass('glyphicon-folder-open');
         } else {
             children.show('fast');
-            $(this).attr('title', 'Collapse this branch').find(' > i').addClass('icon-minus-sign').removeClass('icon-plus-sign');
+            $(this).attr('title', 'Collapse this branch').find(' > span.glyphicon').addClass('glyphicon-folder-open').removeClass('glyphicon-folder-close');
         }
         e.stopPropagation();
     });
