--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,5 +1,8 @@
-<form action="/p/<%= @page.permalink %>/edit" method="post" class="form-stacked">
+<form action="/p/<%= @page.permalink %>/edit" method="post" role="form">
+  <div class="form-group">
 	<label for="content">Page content</label>
-	<textarea id="content" class="xlarge" name="content"><%= @page.raw %></textarea>		
-	<input type="submit" value="Save page" class="btn primary small">
+	<textarea id="content" class="form-control" rows="15" name="content"><%= @page.raw %></textarea>		
+  </div>
+	<button type="submit" class="btn btn-primary btn-sm pull-right">Save page</button>
+  <div class="clearfix"></div>
 </form>
