fix titlezing to work with dirs, move methods to page class

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,7 +16,7 @@
 <body>
 	<section id="content">
 		<div id="page" class="page-header">
-			<h1 class="container"><%= '<a href="/">Home</a> &gt; ' if @name != "Home" %><%= @name %></h1>
+			<h1 class="container"><%= '<a href="/">Home</a> &gt; ' if @name != " home" %><%= @name %></h1>
 			<% if @alert %>
 				<div class="alert alert-danger"><%= @alert %></div>
 			<% end %>
