--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,16 +15,16 @@
 
 <body>
 	<section id="content">
-		<div id="page" class="page-header">
-			<h1 class="container"><%= '<a href="/">Home</a> &gt; ' if @name != " home" %><%= @name %></h1>
+    <%= yield_content :breadcrumb %>
+		<div id="page" class="page-header" style="margin-top: -5px">
+			<h1 class=" container" ><%= @name %></h1>
 			<% if @alert %>
 				<div class="alert alert-danger"><%= @alert %></div>
 			<% end %>
-	</div>	
+    </div>	
+
   <div class="container">
-    <div class="well">
 			<%= yield %>      
-    </div>
     
 				
 		<% if !@error %>
