--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,11 +6,15 @@
 	<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/css/bootstrap.css">	
 	<link rel="stylesheet" href="/css/tree.css">	
+	<link rel="stylesheet" href="/css/bootstrap-markdown.min.css">	
   
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://code.jquery.com/jquery.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="./js/bootstrap.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/bootstrap-markdown.js"></script>
+  <script src="/js/markdown.js"></script>
+
 </head>
 
 <body>
@@ -57,5 +61,12 @@
     </small>
   </div>
 	</footer>
+  
+  <script>
+  $('.markdown_editor').markdown({
+    autofocus:true,
+    savable:true,
+  });
+  </script>
 </body>
 </html>
