--- a/views/new.erb
+++ b/views/new.erb
@@ -1,7 +1,7 @@
 <form action="/p/save" method="post" role="form">
   <div class="form-group">
 	<label for="content">Page content</label>
-	<textarea id="content" class="form-control" rows="12" name="content"><%= @content if @content %></textarea>		
+	<textarea id="content" class="form-control markdown_editor" rows="12" name="content"><%= @content if @content %></textarea>		
 	</div>
   <div class="form-group">
 	<label for="name">Document name</label>
